<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".SecondActivity">

    <Button
        android:id="@+id/optionOne"
        android:layout_width="150dp"
        android:layout_height="81dp"
        android:layout_marginLeft="88dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="592dp"
        android:text="@string/option_one_label"
        android:textColor="#ffffff"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="128dp"
        android:contentDescription="@string/image_label"
        android:src="@drawable/karoo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/optionTwo"
        android:layout_width="149dp"
        android:layout_height="81dp"
        android:layout_marginLeft="320dp"
        android:layout_marginStart="320dp"
        android:layout_marginTop="592dp"
        android:text="@string/option_two"
        android:textColor="#ffffff"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/optionThree"
        android:layout_width="149dp"
        android:layout_height="77dp"
        android:layout_marginLeft="88dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="708dp"
        android:text="@string/option_three"
        android:textColor="#ffffff"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/optionFour"
        android:layout_width="146dp"
        android:layout_height="79dp"
        android:layout_marginLeft="320dp"
        android:layout_marginStart="320dp"
        android:layout_marginTop="708dp"
        android:text="@string/option_four"
        android:textColor="#ffffff"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/levelLabel"
        android:layout_width="149dp"
        android:layout_height="48dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/level_label"
        android:textColor="#ffffff"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/guessLabel"
        android:layout_width="209dp"
        android:layout_height="47dp"
        android:layout_marginLeft="224dp"
        android:layout_marginStart="224dp"
        android:layout_marginTop="24dp"
        android:text="@string/guess_label"
        android:textColor="#ff0000"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/rewardLabel"
        android:layout_width="442dp"
        android:layout_height="221dp"
        android:layout_marginLeft="76dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="96dp"
        android:text="@string/reward_label"
        android:textColor="#ffffff"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/messageLabel"
        android:layout_width="447dp"
        android:layout_height="271dp"
        android:layout_marginLeft="76dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="320dp"
        android:text="@string/message_label"
        android:textColor="#ffffff"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>